# Modern_Robotics_Control_IK

./: .gitignore  .gitmodules  FileTree.md  MEMO.md  eslint.config.mjs  next.config.mjs  package.json  pnpm-workspace.yaml  submodule-url.sh  vite.config.js  vite.config.js.NoUse
public/: README.md  TrapVelocGenerator.js  worker.js
public/agilex_piper/: base_link.gltf  link1.gltf  link2.gltf  link3.gltf  link4.gltf  link5.gltf  link6.gltf  link7.gltf  link8.gltf  urdf.json
public/jaka_zu_5/: AG-160-95-2a.gltf  AG-160-95-2b.gltf  AG-160-95-3a.gltf  AG-160-95-3b.gltf  AG-160-95-4a.gltf  AG-160-95-4b.gltf  AG-160-95-body.gltf  mr_vs_urdf.md  shapes.json  urdf.json
public/wasm/: .gitignore  cd_module.js  cd_module.wasm  slrm_module.js  slrm_module.wasm
scripts/: findJSX.js  findUseEffects.js  trapVelocTest.msj
src/app/: Assets.js  MEMO.md  Model.js  RobotScene.js  appmode.js  constTransformGen.js  home.js  layout.js  registerAframeComponents.js  useMqtt.js  webcontroller.js
src/app/auth/normal/: route.ts
src/app/auth/practice/: route.ts
src/app/practice/: page.js
src/app/viewer/: page.js
src/app/withCam/: page.js
src/context/: auth.tsx
src/lib/: AuthGate.tsx  MetaworkMQTT.js  auth-server.ts  filters.js  jwt_proc.ts  stereoWebRTC.js
src/modern_robotics/: modern_robotics_Dynamics.js  modern_robotics_Kinematics.js
wasm/: CMakeLists.txt  README.md  dist
workers/: MEMO.md  worker.js  workerWoWASM.js
